Fix the squish.

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -70,7 +70,6 @@
 #home img.feature-image {
   margin: 1.5em;
   max-width: 408px;
-  max-height: 248px;
   height: auto;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
